<resources>
    <string name="app_name">Calendar-Organizer</string>
    <string name="current_date">Current Date</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="user_settings">User Settings</string>
    <string name="calendar">Calendar</string>
    <string name="save_event">Save Event</string>
    <string name="event_title">Event Title</string>
    <string name="add_a_location">Add a location</string>
    <string name="add_your_notes">Add your notes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="events">Events</string>
    <string name="add_event">Add Event</string>
    <string name="no_event_to_display">No event to display!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="note_color">Note Color</string>
    <string name="send_mail">Send mail</string>
    <string name="today">Today</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="next_30_days">Next 30 days</string>
    <string name="all_events">All Events</string>
    <string name="_10_minutes_before">10 minutes before</string>
    <string name="_1_hour_before">1 hour before</string>
    <string name="_1_day_before">1 day before</string>
    <string name="at_the_time_of_event">At the time of event</string>
    <string name="share">Share</string>
    <string name="one_time_event">One-time event</string>
    <string name="add_notification">Add Notification</string>
    <string name="repetition">Repetition</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="yearly">Yearly</string>
    <string name="one_time">One-Time</string>
    <string name="default_ringtone">Ringtone</string>
    <string name="default_reminder_time">Reminder Time</string>
    <string name="default_reminder_frequency">Reminder Frequency</string>
    <string name="app_theme">App Theme</string>
    <string name="dark" translatable="false">Dark</string>
    <string name="orange" translatable="false">Orange</string>

    <string name="choose_theme">Choose Theme</string>
    <string name="ringtone">Ringtone</string>
    <string name="notify">Notify</string>

    <string name="ringtone_1" translatable="false">Nice message tone</string>
    <string name="ringtone_2" translatable="false">Point blank</string>
    <string name="ringtone_3" translatable="false">Tiru-tiru</string>
    <string name="ringtone_4" translatable="false">Android cool</string>
    <string name="ringtone_5" translatable="false">Pi-pi-pi</string>
    <string name="ringtone_6" translatable="false">Cat ring vibration</string>
    <string name="ringtone_7" translatable="false">Cat meow meow</string>
    <string name="ringtone_8" translatable="false">Kitten</string>
    <string name="ringtone_9" translatable="false">Cat call</string>

    <string name="event_details">Event Details</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="create_event">Create event</string>
    <string name="about">About</string>

    <string name="about_text"><b>Short description:</b>\nCalendizer is a simple ad-free application that does not require an Internet connection.\nIt has intuitive controls and minimal settings.\nFunctionality:\n● Number of events per day — on the calendar\n● Viewing lists of events\n● Reminder system\n● Tasks highlighting in color\n● Mark to complete\n● Check special labels for birthdays\n● Choice of light or dark app theme\n● Ability to share an event.\n\n<b>Requires Android:</b>\n6.0+\n\n<b>Russian interface:</b>\nYes\n\n<b>Developer:</b>\n©MeoW Studio\n\n<b>Year of creation: </b>2022\n\n<b>Version:</b>\n1.5.22</string>


    <string name="field_is_empty">Field can\'t be empty!</string>
    <string name="in_the_past">You cannot set a notification to the past</string>
    <string name="edit_warning_title">Editing a Recurring Event</string>
    <string name="edit_warning_text">Are you sure you want to edit this recurring event? All occurrences of this event will also be edited</string>
    <string name="event_created">Event created!</string>
    <string name="event_edited">Event edited!</string>
    <string name="delete_warning_title">Deleting a Recurring Event</string>
    <string name="delete_warning_text">Are you sure you want to delete this recurring event? All occurrences of this event will also be deleted</string>
    <string name="event_deleted">Event removed!</string>
    <string name="all_day_event">All day Event</string>
    <string name="is_birthday">Birthday</string>

    <string name="birthdays">Birthdays</string>

    <string name="done_mark">Mark of completion:</string>

    <string name="choose_color">Chose the color</string>
</resources>
