<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/BottomNavigation_Item_Calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/BottomNavigation_Item_UpcomingEvents"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/upcoming_events" />
    <item
        android:id="@+id/BottomNavigation_Item_Settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/user_settings" />
    <item
        android:id="@+id/BottomNavigation_Item_About"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/about" />

</menu>