<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/card">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainColor"
        android:gravity="center"
        android:padding="6dp"
        android:textSize="20sp"
        android:text="@string/repetition"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="2dp" />

    <RadioGroup
            android:id="@+id/AlertDialogLayout_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_time"
                android:textSize="18sp"
                android:textColor="?attr/textColor"
                android:buttonTint="?attr/textColor"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textSize="18sp"
                android:textColor="?attr/textColor"
                android:buttonTint="?attr/textColor"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:textSize="18sp"
                android:textColor="?attr/textColor"
                android:buttonTint="?attr/textColor"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:textSize="18sp"
                android:textColor="?attr/textColor"
                android:buttonTint="?attr/textColor"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yearly"
                android:textSize="18sp"
                android:textColor="?attr/textColor"
                android:buttonTint="?attr/textColor"/>
        </RadioGroup>

</LinearLayout>