<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?attr/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="?attr/mainColor">

        <ImageButton
            android:id="@+id/CalenderFragment_Button_Prev"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:tint="@color/white"
            android:background="@color/transparent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/CalenderFragment_TextView_CurrentDate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/current_date"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageButton
            android:id="@+id/CalenderFragment_Button_Next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            android:tint="@color/white"
            android:background="@color/transparent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/headViewColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/line"/>

    <GridView
        android:id="@+id/CalenderFragment_GridView_Dates"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7" />

</LinearLayout>