<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/card">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainColor"
        android:gravity="center"
        android:padding="6dp"
        android:textSize="20sp"
        android:text="@string/choose_theme"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="2dp"/>

    <RadioGroup
        android:id="@+id/AlertDialogLayout_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:textSize="18sp"
            android:textColor="?attr/textColor"
            android:buttonTint="?attr/textColor"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textSize="18sp"
            android:textColor="?attr/textColor"
            android:buttonTint="?attr/textColor"/>
        </RadioGroup>

</LinearLayout>