<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="?attr/mainColor"
                android:gravity="center"
                android:text="@string/events"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:elevation="2dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:background="?attr/Background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/AlertDialog_TextView_NoEvent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="50dp"
                    android:gravity="center"
                    android:text="@string/no_event_to_display"
                    android:textSize="16sp"
                    android:textColor="?attr/textColor"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/AlertDialog_RecyclerView_ListEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/AlertDialog_Button_AddEvent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?attr/mainColor"
            android:text="@string/add_event"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:elevation="2dp"/>
    </LinearLayout>
</RelativeLayout>