<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/Background">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/mainColor"
        app:logo="@drawable/logo_settings"
        app:title="@string/user_settings"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/line"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/UserSettingsFragment_CardView_RingTone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                app:srcCompat="@drawable/ic_baseline_music_note_24"
                app:tint="?attr/iconColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_ringtone"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/UserSettingsFragment_TextView_DefaultRingtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="?attr/textColor" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/tr25"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/UserSettingsFragment_CardView_ReminderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                app:srcCompat="@drawable/ic_baseline_alarm_24"
                app:tint="?attr/iconColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reminder_time"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/UserSettingsFragment_TextView_DefaultReminderTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="?attr/textColor" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/tr25"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/UserSettingsFragment_CardView_ReminderFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                app:srcCompat="@drawable/ic_baseline_history_24"
                app:tint="?attr/iconColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_reminder_frequency"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/UserSettingsFragment_TextView_DefaultReminderFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="?attr/textColor" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/tr25"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/UserSettingsFragment_CardView_AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                app:srcCompat="@drawable/ic_baseline_brightness_medium_24"
                app:tint="?attr/iconColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_theme"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/UserSettingsFragment_TextView_AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dark Theme"
                    android:textColor="?attr/textColor" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/tr25"/>

</LinearLayout>